<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#EFE3E7"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/fromTfl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/adamina"
        android:text="@string/poweredByTfl"
        android:textAlignment="center"
        android:textColor="@color/dim_dark_grey"
        android:textSize="12sp"
        android:typeface="normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/copyRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/adamina"
        android:text="@string/copyRightText"
        android:textAlignment="center"
        android:textColor="@color/dim_dark_grey"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addStopButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"
        android:background="#710D22"
        android:text="@string/add_stop_text"
        android:textSize="22sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/copyRight"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/stopList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/addStopButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fromTfl" />

    <Button
        android:id="@+id/useMapButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:background="#710D22"
        android:text="@string/use_map_text"
        android:textSize="22sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/copyRight"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>